--- a/src/app.html
+++ b/src/app.html
@@ -7,9 +7,9 @@
     <link rel="icon" href="/favicon.png" />
     <link rel="alternate icon" href="/favicon.ico" />
     <link rel="mask-icon" href="/maskable-icon-512x512.png" color="#5bbad5" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon-512x512.png" sizes="180x180" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     %sveltekit.head%
 </head>
 <body data-sveltekit-preload-data="hover">
